<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/days_monday"
            android:title="@string/menu_monday" />
        <item
            android:id="@+id/days_tuesday"
            android:title="@string/menu_tuesday"/>

        <item
            android:id="@+id/days_wednesday"
            android:title="@string/menu_wednesday" />

        <item
            android:id="@+id/days_thursday"
            android:title="@string/menu_thursday"/>
        <item
            android:id="@+id/days_friday"
            android:title="@string/menu_friday" />

    </group>
</menu>